# 32.5.2-More-Film-Info-and-Search-function

./: CMakeLists.txt  film_catalog.json  main.cpp
